# cpp-near-dedupe

./: CPPDeduper.sln  Dockerfile  README.md
CPPDeduper/: ArrowLoaderThread.h  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CPPDeduper.cpp  CPPDeduper.h  CPPDeduper.vcxproj  CPPDeduper.vcxproj.filters  ChunkList.h  CoalesceByFileThread.h  CompareStrategies.h  ComparerThread.h  ComparerThread2.h  ComparerThreadBruteForce.h  DupeResolverThread.h  HashTable.h  HasherThread.h  Hashing.h  Jaccard.h  LSHBandHashMap.h  LockableQueue.h  LockableRingBuffer.h  LongRunningWorkerThread.h  Main.cpp  MinHasherThread.h  PipelineThread.h  Shingler32.hpp  Shingler64.hpp  SimpleLogging.h  SplitList.h  ThreadPool.h  WriteMinhashArrowFileThread.h  isalphanum.cc  isalphanum.h  shingle.cc
release_bins/linux-gcc/: CPPDeduper
